# jenkins-test-target

./: CMakeLists.txt  Jenkinsfile
scripts/: flash_firmware.sh  run_tests.sh
src/: main.c  motor.c  motor.h
tests/: test_motor.c
